fix credit spacing

--- a/src/css/credits.css
+++ b/src/css/credits.css
@@ -39,8 +39,8 @@
 }
 
 #credits .credits-WDDP-container {
-  display: grid;
-	grid-template-areas: "w" "p" "des" "dev";
+	display: flex;
+	flex-direction: column;
   gap: 1rem;
   width: 100%;
   margin-top: 2rem;
@@ -78,7 +78,6 @@
   letter-spacing: 0.02rem;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, 13rem);
-	grid-template-rows: repeat(4, 1.5rem);
 }
 
 #credits .credits-names p {
